[APD-1560] fixing alignment of byline & timestamp

--- a/components/_helper_components/embed/LiveUpdates/default.scss
+++ b/components/_helper_components/embed/LiveUpdates/default.scss
@@ -503,7 +503,6 @@
 
       .byline {
         display: inline-block;
-        vertical-align: middle;
         margin-left: 8px;
         letter-spacing: -.15px;
 
